2007-11-13  Nick Clifton  <nickc@redhat.com>

	* ld-mn10300/i127740.s: New test: Checks relaxation and alignment.
	* ld-mn10300/i127740.d: New file: Expected disassembly.
	* ld-mn10300/i135409-3.s: New test: Check symbols inside a relaxed region.
	* ld-mn10300/i135409-3.d: New file: Expected disassembly.
	* ld-mn10300/mn10300.exp: Run new tests.

2007-11-08  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-vxworks/tls-2.d: New.
	* ld-vxworks/tls-2.s: New.

2007-11-07  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-vxworks/tls-1.d: New.
	* ld-vxworks/tls-1.s: New.

2007-11-06  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsso.d: Update for changed got alloc order.
	* ld-powerpc/tlsso.r: Likewise.

	* ld-powerpc/tlsso32.d: Update for changed got alloc order.

2007-11-05  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/merge3.d, ld-elf/merge3.s: Delete.

2007-11-05  Danny Smith  <dannysmith@users.sourceforge.net>

	* ld-scripts/align.exp: Enable for PECOFF.
	* ld-scripts/alignof.exp: Likewise.

2007-11-01  Joseph Myers  <joseph@codesourcery.com>

	* ld-elf/merge3.d, ld-elf/merge3.s: New.

2007-10-30  Nick Clifton  <nickc@redhat.com>

	* ld-mn10300/mn10300.exp: Run new tests.  Skip i126256 test if
	a compiler is not available.
	* ld-mn10300/i112045-3.s: New test.
	* ld-mn10300/i112045-3.d: Expected disassembly.
	* ld-mn10300/i135409.s: Rename to i135409-1.s.
	* ld-mn10300/i135409.d: Rename to i135409-1.d
	* ld-mn10300/i135409-2.s: New test.
	* ld-mn10300/i135409-2.d: Expected symbol table.
        * ld-mn10300/i36434.d: Adjust expected disassembly.

2007-10-26  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/rgn-over1.d: Accept extra LOAD at end of map file.
	* ld-scripts/rgn-over2.d: Likewise.
	* ld-scripts/rgn-over3.d: Likewise.
	* ld-scripts/rgn-over4.d: Likewise.
	* ld-scripts/rgn-over5.d: Likewise.
	* ld-scripts/rgn-over6.d: Likewise.
	* ld-scripts/rgn-over7.d: Likewise.

2007-10-25  Daniel Jacobowitz  <dan@codesourcery.com>
